--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -6,122 +6,122 @@
   "availalbleFonts": [
     {
       "fontId": "abc1",
-      "fontIconId": "1",
+      "fontOrder": "1",
       "isNumerable": false
     },
     {
       "fontId": "abc2",
-      "fontIconId": "2",
+      "fontOrder": "2",
       "isNumerable": false
     },
     {
       "fontId": "abc3",
-      "fontIconId": "3",
+      "fontOrder": "3",
       "isNumerable": false
     },
     {
       "fontId": "abc4",
-      "fontIconId": "4",
+      "fontOrder": "4",
       "isNumerable": false
     },
     {
       "fontId": "abc5",
-      "fontIconId": "5",
+      "fontOrder": "5",
       "isNumerable": false
     },
     {
       "fontId": "abc6",
-      "fontIconId": "6",
+      "fontOrder": "6",
       "isNumerable": false
     },
     {
       "fontId": "abc7",
-      "fontIconId": "7",
+      "fontOrder": "7",
       "isNumerable": false
     },
     {
       "fontId": "abc8",
-      "fontIconId": "8",
+      "fontOrder": "8",
       "isNumerable": false
     },
     {
       "fontId": "abc9",
-      "fontIconId": "9",
+      "fontOrder": "9",
       "isNumerable": false
     },
     {
       "fontId": "abc10",
-      "fontIconId": "10",
+      "fontOrder": "10",
       "isNumerable": false
     },
     {
       "fontId": "abc11",
-      "fontIconId": "11",
+      "fontOrder": "11",
       "isNumerable": false
     },
     {
       "fontId": "abc12",
-      "fontIconId": "12",
+      "fontOrder": "12",
       "isNumerable": false
     },
     {
       "fontId": "abc13",
-      "fontIconId": "13",
+      "fontOrder": "13",
       "isNumerable": false
     },
     {
       "fontId": "abc14",
-      "fontIconId": "14",
+      "fontOrder": "14",
       "isNumerable": false
     },
     {
       "fontId": "abc15",
-      "fontIconId": "15",
+      "fontOrder": "15",
       "isNumerable": false
     },
     {
       "fontId": "abc16",
-      "fontIconId": "16",
+      "fontOrder": "16",
       "isNumerable": false
     },
     {
       "fontId": "abc17",
-      "fontIconId": "17",
+      "fontOrder": "17",
       "isNumerable": false
     },
     {
       "fontId": "abc18",
-      "fontIconId": "18",
+      "fontOrder": "18",
       "isNumerable": false
     },
     {
       "fontId": "abc19",
-      "fontIconId": "19",
+      "fontOrder": "19",
       "isNumerable": false
     },
     {
       "fontId": "abc20",
-      "fontIconId": "20",
+      "fontOrder": "20",
       "isNumerable": false
     },
     {
       "fontId": "abc21",
-      "fontIconId": "21",
+      "fontOrder": "21",
       "isNumerable": false
     },
     {
       "fontId": "abc22",
-      "fontIconId": "22",
+      "fontOrder": "22",
       "isNumerable": false
     },
     {
       "fontId": "abc23",
-      "fontIconId": "23",
+      "fontOrder": "23",
       "isNumerable": false
     },
     {
       "fontId": "abc24",
-      "fontIconId": "24",
+      "fontOrder": "24",
       "isNumerable": false
     }
   ]
