--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -3,7 +3,7 @@
 "is_testing": false,
 "is_idfa_enabled":false,
   "isDetailAdsFloating":true,
-  "availalbleFonts": [
+  "availableFonts": [
     {
       "fontId": "abc1",
       "fontOrder": "1",
