--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -7,122 +7,146 @@
     {
       "fontId": "abc1",
       "fontOrder": "1",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": true
     },
     {
       "fontId": "abc2",
       "fontOrder": "2",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": true
     },
     {
       "fontId": "abc3",
       "fontOrder": "3",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc4",
       "fontOrder": "4",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc5",
       "fontOrder": "5",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc6",
       "fontOrder": "6",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc7",
       "fontOrder": "7",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc8",
       "fontOrder": "8",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc9",
       "fontOrder": "9",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc10",
       "fontOrder": "10",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc11",
       "fontOrder": "11",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc12",
       "fontOrder": "12",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc13",
       "fontOrder": "13",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc14",
       "fontOrder": "14",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc15",
       "fontOrder": "15",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc16",
       "fontOrder": "16",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc17",
       "fontOrder": "17",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc18",
       "fontOrder": "18",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc19",
       "fontOrder": "19",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc20",
       "fontOrder": "20",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc21",
       "fontOrder": "21",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc22",
       "fontOrder": "22",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc23",
       "fontOrder": "23",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     },
     {
       "fontId": "abc24",
       "fontOrder": "24",
-      "isNumerable": false
+      "isNumerable": false,
+      "isFree": false
     }
   ]
 }
