--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -1,8 +1,8 @@
 {
 "latest_version": "0.0.0",
-"is_testing": true,
+"is_testing": false,
 "is_idfa_enabled": false,
-  "isDetailAdsFloating": false,
+  "isDetailAdsFloating": true,
   "availableFonts": [
     {
       "fontId": "1",
