--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -2,7 +2,7 @@
 "latest_version": "1.1.0",
 "is_testing": false,
 "is_idfa_enabled": false,
-  "isDetailAdsFloating": true,
+  "isDetailAdsFloating": false,
   "availableFonts": [
     {
       "fontId": "1",
