--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -1,7 +1,7 @@
 {
-"latest_version": "1.1.0",
-"is_testing": true,
-"is_idfa_enabled": true,
+"latest_version": "1.1.1",
+"is_testing": false,
+"is_idfa_enabled": false,
   "isDetailAdsFloating": false,
   "availableFonts": [
     {
@@ -76,22 +76,22 @@
     },
     {
       "fontId": "15",
-      "isNumerable": false,
+      "isNumerable": true,
       "isFree": false
     },
     {
       "fontId": "16",
-      "isNumerable": false,
+      "isNumerable": true,
       "isFree": false
     },
     {
       "fontId": "17",
-      "isNumerable": false,
+      "isNumerable": true,
       "isFree": false
     },
     {
       "fontId": "18",
-      "isNumerable": false,
+      "isNumerable": true,
       "isFree": false
     },
     {
@@ -116,7 +116,7 @@
     },
     {
       "fontId": "23",
-      "isNumerable": false,
+      "isNumerable": true,
       "isFree": false
     },
     {
