--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -3,6 +3,8 @@
 "is_testing": false,
 "is_idfa_enabled": false,
   "isDetailAdsFloating": true,
+  "is_detail_ads_floating": true,
+  "is_GDPR_enabled": false,
   "availableFonts": [
     {
       "fontId": "1",
