--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -1,9 +1,9 @@
 {
-"latest_version": "1.1.2",
-"is_testing": true,
+"latest_version": "1.1.3",
+"is_testing": false,
 "is_idfa_enabled": false,
   "isDetailAdsFloating": true,
-  "is_detail_ads_floating": false,
+  "is_detail_ads_floating": true,
   "is_GDPR_enabled": false,
   "availableFonts": [
     {
