--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -2,8 +2,8 @@
 "latest_version": "1.1.3",
 "is_testing": false,
 "is_idfa_enabled": false,
-  "isDetailAdsFloating": true,
-  "is_detail_ads_floating": true,
+  "isDetailAdsFloating": false,
+  "is_detail_ads_floating": false,
   "is_GDPR_enabled": false,
   "availableFonts": [
     {
