--- a/android_graffitor_config.json
+++ b/android_graffitor_config.json
@@ -1,5 +1,7 @@
 {
 "latest_version": "1.1.2",
 "is_testing": false,
-"isDetailAdsFloating": true
+"isDetailAdsFloating": true,
+  "is_detail_ads_floating": true,
+  "is_premium_content_enabled_with_rewarded_ads": true
 }
