--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -1,6 +1,6 @@
 {
 "latest_version": "1.1.3",
-"is_testing": false,
+"is_testing": true,
 "is_idfa_enabled": false,
   "isDetailAdsFloating": false,
   "is_detail_ads_floating": false,
