--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -1,7 +1,7 @@
 {
 "latest_version": "1.1.4",
-"is_testing": true,
-"is_idfa_enabled": false,
+"is_testing": false,
+"is_idfa_enabled": true,
   "isDetailAdsFloating": false,
   "is_detail_ads_floating": false,
   "is_GDPR_enabled": false,
