--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -5,6 +5,8 @@
   "isDetailAdsFloating": false,
   "is_detail_ads_floating": false,
   "is_GDPR_enabled": true,
+  "appstore_url": "https://apps.apple.com/us/app/id1502358961",
+  "is_force_update": false,
   "availableFonts": [
     {
       "fontId": "1",
