--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -6,7 +6,7 @@
   "is_detail_ads_floating": false,
   "is_GDPR_enabled": true,
   "appstore_url": "https://apps.apple.com/us/app/id1502358961",
-  "is_force_update": false,
+  "is_force_update": true,
   "availableFonts": [
     {
       "fontId": "1",
