--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -5,7 +5,7 @@
   "isDetailAdsFloating": false,
   "is_detail_ads_floating": false,
   "is_GDPR_enabled": true,
-  "appstore_url": "https://apps.apple.com/us/app/id1502358961",
+  "appstore_url": "https://itunes.apple.com/us/app/apple-store/id1502358961?mt=8",
   "is_force_update": true,
   "availableFonts": [
     {
