--- a/graffitor_config.json
+++ b/graffitor_config.json
@@ -7,6 +7,7 @@
   "is_GDPR_enabled": true,
   "appstore_url": "https://itunes.apple.com/us/app/apple-store/id1502358961?mt=8",
   "is_force_update": false,
+  "file_url":"https://github.com/humxam/graffitor/raw/main/",
   "att_title":"App supports free content",
   "att_message":"App activity helps support content creator by allowing ads and keeping content free for you. Continue to Allow Tracking to keep supporting free content",
   "availableFonts": [
